# mprisserv

./: .gitignore  Makefile  MprisServ.cpp  README  configure  configure.in  mprisserv.pro
include/: MprisConnection.hpp  MprisDetector.hpp  QHttpServer.hpp
src/: MprisConnection.cpp  MprisDetector.cpp  QHttpServer.cpp
